--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.11",
     "@eslint/js": "^9.39.1",
     "@types/node": "^25.0.9",
     "@types/react": "^19.2.5",
@@ -37,6 +38,7 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
+    "ultracite": "7.0.11",
     "vite": "npm:rolldown-vite@7.2.5"
   },
   "overrides": {
